Updates ignore list for codeblocks.

--- a/.gitignore
+++ b/.gitignore
@@ -483,3 +483,11 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+### CodeBlocks ###
+# specific to CodeBlocks IDE
+*.layout
+*.depend
+# generated directories
+bin/
+obj/
