--- a/polygon_clipper_cb/polygon_clipper_cb.cbp
+++ b/polygon_clipper_cb/polygon_clipper_cb.cbp
@@ -7,12 +7,16 @@
 		<Option compiler="gfortran" />
 		<Build>
 			<Target title="Debug">
+				<Option platforms="Unix;" />
 				<Option output="bin/Debug/polygon_clipper_cb" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gfortran" />
 				<Compiler>
+					<Add option="-cpp" />
+					<Add option="-ffree-line-length-none" />
 					<Add option="-g" />
+					<Add option="-D_DEBUG" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -22,6 +26,8 @@
 				<Option compiler="gfortran" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add option="-cpp" />
+					<Add option="-ffree-line-length-none" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -31,7 +37,21 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="main.f95" />
+		<Unit filename="../src/main.f90">
+			<Option weight="91" />
+		</Unit>
+		<Unit filename="../src/polygon_clipper.f90">
+			<Option weight="63" />
+		</Unit>
+		<Unit filename="../src/polygon_data.f90">
+			<Option weight="0" />
+		</Unit>
+		<Unit filename="../src/polygon_reader.f90">
+			<Option weight="36" />
+		</Unit>
+		<Unit filename="../src/polygon_writer.f90">
+			<Option weight="8" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<debugger />
